server is up and running. basic gui implemented